--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -192,11 +192,11 @@ swagger:
   title: XBoot API接口文档
   description: XBoot Api Documentation
   version: 1.0.0
-#  termsOfServiceUrl: http://blog.exrick.cn
-#  contact:
-#    name: Exrick
-#    url: http://blog.exrick.cn
-#    email: 1012139570@qq.com
+  termsOfServiceUrl: http://blog.exrick.cn
+  contact:
+    name: Exrick
+    url: http://blog.exrick.cn
+    email: 1012139570@qq.com
 
 # Mybatis-plus
 mybatis-plus:
